fix:keyboardSigns same key in Shift

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,11 +6,15 @@ $width-keyboard: 800px;
   transition: all 0.5s ease;
 }
 
+html {
+  box-sizing: border-box;
+}
+
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
 }
 .container {
   width: $width-keyboard;
@@ -19,6 +23,7 @@ $width-keyboard: 800px;
 }
 
 .textarea {
+  box-sizing: border-box;
   width: 100%;
   border: 1px solid $main-color;
   height: 260px;
